# uploadsvc-fastapi

./: .env  .env-prod  README.md  compose.yaml  justfile
backend/: justfile  pyproject.toml  run_app.sh
backend/src/uploadsvc/: __init__.py  auth.py  config.py  database.py  models.py  settings.py  util.py
backend/src/uploadsvc/templates/: header.html  list_files.html
frontend/: Dockerfile  justfile  package-lock.json  package.json
frontend/src/: App.js  AuthContext.js  index.css  index.js
frontend/src/components/: FileList.js  FileUpload.js  Login.js  Logout.js  Navbar.js
