[tool.poetry]
name = "uploadsvc"
version = "0.1.0"
description = ""
authors = ["Marek Wiewiórski <marek@mwicat.com>"]
packages = [{include = "uploadsvc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^21.2.0"
fastapi = {extras = ["all"], version = "^0.105.0"}
werkzeug = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
